# aws-simple-currency-converter

./: .env.example  .gitignore  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  terraform.tfvars.example
app/: main.py
app/api/v1/endpoints/: currency.py
app/core/: settings.py
app/models/: currency.py
app/services/: exchange_rates.py
infrastructure/: template.yaml
scripts/: deploy.py
tests/: conftest.py
tests/test_api/: test_currency_endpoints.py
tests/test_services/: test_exchange_rates.py
